services/aci-hello.yaml
apiVersion: "v1"
kind: Pod
metadata:
  name: abluelabelimage
  labels:
    name: abluelabel
spec:
  containers:
    - name: blue
      image: apmworkshop.azurecr.io/blue:latest
      ports:
        - containerPort: 80
          name: http
          protocol: TCP 
  imagePullSecrets:
    - name: kuberegistry
