services/blue-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: bluedemo
  labels:
    name: servicedemo
    color: blue
    demo: colorsdemo
spec:
  containers:
    - name: blue
      image: dzregistry.azurecr.io/blue:latest
      ports:
        - containerPort: 80
          name: http
          protocol: TCP 
  imagePullSecrets:
    - name: kuberegistry
