services/ubuntu.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ubuntuhost
spec:
  containers:
    - name: ubuntu
      image: tutum/curl
      command: ["tail"]
      args: ["-f", "/dev/null"]
