services/bar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
  labels:
    app: bar-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: bar-http
  selector:
    app: bar-svc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bar-svc
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: bar-svc
    spec:
      containers:
      - name: bar-svc
        image: gcr.io/google_containers/echoserver:1.5
        ports:
        - containerPort: 8080
