services/colors-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  labels:
    name: blueservice
spec:
  selector:
    color: blue
  type: ClusterIP
  ports:
   - port: 80
     name: http
     targetPort: 80
     protocol: TCP
