services/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: colorservice
  labels:
    name: colorservice
spec:
  selector:
    name: servicedemo 
  type: LoadBalancer
  ports:
   - port: 80
     name: http
     targetPort: 80
     protocol: TCP
