services/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
  selector:
    app: nginx-ingress-lb
